public interface Collectable{
	
	void get_collected (Hero hero);
	
	
}
