public interface Collidable{
	
	void collide (GameObject other);
	
}
